# binflow

./: CMakeLists.txt  README.md
include/: Analyzer.hpp  CLI.hpp  Disassembler.hpp  FileReader.hpp  Formatter.hpp  PEParser.hpp  Visualizer.hpp
src/: Main.cpp
src/cli/: CLI.cpp
src/core/: Analyzer.cpp  Disassembler.cpp  Formatter.cpp  Visualizer.cpp
src/pe/: PEParser.cpp
src/utils/: FileReader.cpp
